# harmony

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_AUDIT.md  Dockerfile  INDEXING.md  README.md  alembic.ini  dev.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  es_config.yaml  harmony_config.example.yaml  indexer_config.example.yaml  pyproject.toml  scrapy.cfg  test_pipeline_streaming.py  test_streaming.py
.claude/rules/: architecture.md  config.md  data-models.md  patterns.md
.claude/scripts/: find_data_models.py
.github/: dependabot.yml
.github/scripts/: parse-security-reports.py
.github/workflows/: build-and-push.yml  pre-commit.yml  security-scan.yml  test.yml
admin-docker/: Dockerfile  Dockerfile.dev.backend  nginx.conf  supervisord.conf
admin-docker/sso-browser/: Dockerfile  start-vnc.sh
admin-frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-frontend/src/: App.tsx
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_progress_fields.py  0003_add_service_configs.py  0004_add_model_settings.py  0005_add_conversations_table.py  0006_add_conversation_user_id.py  0007_add_users_table.py  0008_add_users_fk_conversations.py  0009_add_token_usage_table.py  0010_add_harmony_role_to_api_keys.py  0011_add_conversations_mode_title.py  0012_add_message_feedback.py  0013_add_user_preferences.py  0014_add_interrupted_job_status.py  0015_crawl_configs.py  0016_indexer_config.py  0017_audit_events.py  0018_job_logs.py  0019_crawl_blacklist.py  0020_webhooks.py  0021_model_registry.py  0022_indexer_checkpoints.py  0023_search_query_log.py  0024_add_cancelled_job_status.py  0025_data_sources.py  0026_ollama_hosts_and_llm_api_keys.py  0027_rename_ollama_hosts_to_model_hosts.py  0028_conversation_traces.py
backend/: Dockerfile
configs/: es_config.yaml
configs/k8s/: README.md  configmap.example.yaml  elasticsearch-statefulset.yaml  harmony-api-deployment.yaml  harmony-api-service.yaml  harmony-app.yaml  harmony-frontend.yaml  hpa.yaml  ingress.yaml  nvidia-device-plugin-daemonset.yaml  postgres-statefulset.yaml  qdrant-statefulset.yaml  rbac.yaml  redis-deployment.yaml  secret.example.yaml  vllm-completions-deployment.yaml  vllm-reranker-deployment.yaml
docker/: api.Dockerfile
docker/sso-browser/: Dockerfile
docs/: AUTHENTICATION.md  BACKUP.md  CONFIGURATION.md  CRAWLER.md  CUSTOM_AUTH_PROVIDER.md  DEPLOYMENT.md  DEVELOPMENT.md  ES_MIGRATION.md  FRONTEND.md  INDEXING.md  PROVIDERS.md  SCALING.md  security-audit-phase1.md
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
harmony/: exceptions.py
harmony/agents/: __init__.py  _base.py  _base_prompt.md  _citation_format.md  _critic.py  _models.py  _orchestrator.py  _query_planner.py  _searcher.py  _source_pool.py  _synthesizer.py
harmony/api/: _config.py  _dependencies.py  _health.py  _middleware.py  _rate_limit.py  _settings.py  _state.py  _status.py  _status_sink.py  admin_config.py  config.py  dependencies.py  exceptions.py  main.py
harmony/authz/: __init__.py  _context.py  _providers.py
harmony/clients/: __init__.py  _elasticsearch.py  _qdrant.py
harmony/config/: elasticsearch.py  indexer.py
harmony/core/: __init__.py  _elasticsearch_config.py  _language_detection.py  _logging.py  _parsers.py  _qdrant_utils.py  _writers.py  ocr.py
harmony/crawler/: cli.py  config.py  extensions.py  items.py  logger.py  middlewares.py  pipelines.py  processors.py  reset_state.py  safety.py  safety_lists.py  settings.py  socks_middleware.py  state.py  writers.py
harmony/db/: connection.py  models.py  redis_client.py  repositories.py
harmony/indexer/: __init__.py  __main__.py  _config.py  _core.py  _ingest_fs.py  _language.py  _ocr.py  _pipeline.py  _sources.py  acl_backfill.py  cli.py  config.py  embedder.py  parsers.py
harmony/models/: __init__.py  _job.py  _status.py  search.py
harmony/observability/: __init__.py  _logging.py  _token_tracking.py
harmony/prompts/: README.md
harmony/providers/: __init__.py  _base.py  _filesystem.py  _registry.py  _web_crawler.py
harmony/scripts/: __init__.py  embedder.py  reset_state.py
harmony/services/: __init__.py  _conversation.py  _document_cache.py  _external_search.py  _llm.py  _prompts.py  _search.py  _secret_service.py  _status_sink.py
harmony/static/: model_manifest.json
harmony/tools/: __init__.py  _documents.py  _mcp.py  _registry.py  _search.py  acl_backfill.py  embedder.py
keycloak/: harmony-realm.json
openwebui_pipelines/: harmony_agentic_search.py  harmony_direct_search.py  harmony_search_model.py
openwebui_tools/: harmony_search.py
scripts/: backup.sh  restore.sh  test-with-es.sh
tests/: conftest.py  test_admin_audit.py  test_admin_configs.py  test_admin_jobs.py  test_admin_models.py  test_admin_schedules.py  test_admin_settings.py  test_admin_urls.py  test_admin_users.py  test_admin_webhooks.py  test_agentic_integration.py  test_agentic_search.py  test_ai_search.py  test_auth_middleware.py  test_auth_providers.py  test_auth_registry.py  test_backfill_migration_0026.py  test_conversation.py  test_conversations.py  test_core_language_detection.py  test_core_parsers.py  test_core_qdrant_utils.py  test_cors.py  test_crawler_safety.py  test_crawler_version_filter.py  test_data_residency.py  test_dependencies.py  test_documents_no_dead_bytesio.py  test_embedder.py  test_encapsulation.py  test_feedback_repo_and_config.py  test_foa_search.py  test_indexer_es_source.py  test_jobs_embed.py  test_keyword_backend.py  test_llm_service.py  test_main.py  test_mcp_session_lifetime.py  test_middleware_safety.py  test_model_settings.py  (+25 more)
tests/agents/: test_critic.py  test_orchestrator_iterative.py  test_query_planner.py  test_source_pool.py
tests/api/: test_dependencies.py  test_main_lifespan.py  test_mcp_session_lifetime.py  test_middleware.py  test_nightly_jobs.py  test_observability.py  (+2 more)
(+652 files in other folders)
