[project]
dependencies = [
  "python-dateutil >= 2.8.0",
  "scrapy >= 2.11.0",
  "beautifulsoup4 >= 4.12.0",
  "lxml >= 5.0.0",
  "python-dotenv >= 1.0.0",
  "rich >= 13.0.0",
  "langdetect >= 1.0.9",
  "pyyaml >= 6.0.0",
  "fastapi >= 0.115.0",
  "uvicorn >= 0.34.0",
  "litellm >= 1.55.0",
  "httpx >= 0.28.0",
  "pydantic-settings >= 2.0.0",
  "faiss-cpu >= 1.7.0",
  "qdrant-client >= 1.14.0",
  "kv-search[elasticsearch] >= 0.3, < 0.4",
  "pysocks >= 1.7.0",
  "jsonargparse[signatures] >= 4.27.0",
  "pypdf >= 4.0.0",
  "python-docx >= 1.1.0",
  "openpyxl >= 3.1.0",
  "odfpy >= 1.4.0",
  "chardet >= 5.2.0",
  "mcp >= 1.1.0",
  "jinja2 >= 3.1.0",
  "psycopg[binary,pool] >= 3.1.0",
  "redis >= 5.0.0",
  "PyJWT[crypto] >= 2.10.0",
]
name = "harmony"
dynamic = ["version", "readme"]
description = "On-premise LLM-powered information retrieval system - The opposite of Perplexity"
license = { text = "Other/Proprietary License" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "~=3.13"

[[project.authors]]
name = "Anton Lu"
email = "anton96lu@gmail.com"

[project.urls]
homepage = "https://github.com/antolu/harmony"
repository = "https://github.com/antolu/harmony"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-asyncio >= 0.23.0", "httpx >= 0.28.0", "respx >= 0.21.0"]
doc = ["myst-parser", "sphinx-copybutton"]
dev = ["pre-commit", "ruff", "mypy"]
browser = ["scrapy-playwright >= 0.0.34", "playwright >= 1.40.0"]
elasticsearch = ["elasticsearch >= 8.0.0"]
admin = [
  "sse-starlette >= 2.0.0",
  "python-multipart >= 0.0.9",
  "aiofiles >= 24.0.0",
  "alembic >= 1.13.0",
  "sqlalchemy >= 2.0.0",
]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 6.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "harmony/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["harmony*"]
namespaces = false

[tool.setuptools.package-data]
carla = ["py.typed"]

[project.scripts]
harmony-crawl = "harmony.crawler.cli:main"
harmony-index = "harmony.indexer.cli:main"
harmony-api = "harmony.api.main:run"
harmony-reset-state = "harmony.crawler.reset_state:main"
harmony-auth = "harmony.crawler.auth.cli:main"
harmony-embed = "harmony.indexer.embedder:main"

# Entry point for custom authentication providers
# Third-party packages can register custom auth providers:
#
# [project.entry-points."harmony.auth_providers"]
# my_custom_auth = "my_package.auth:MyCustomAuthProvider"
[project.entry-points."harmony.auth_providers"]
# Empty by default - for third-party extensions

# include black configuration for easy to use with VSCode and PyCharm
# autoformatter
# For pre-commit, only ruff is used.
[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
]

line-length = 88         # black and ruff default
target-version = "py311"
preview = true

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
  "F",   # pyflakes
  "E",   # error  (pycodestyle)
  "W",   # warning (pycodestyle)
  "I",   # isort
  "N",   # naming  (pep8)
  "UP",  # pyupgrade
  "PLC", # convention  (pylint)
  "PLE", # error  (pylint)
  "PLW", # warning  (pylint)
  "PLR", # refactor  (pylint)
  # "D",  # docstring (pydocstyle),  # not enabled by default
  "PD",     # pandas
  "TRY",    # tryceratops
  "NPY",    # numpy
  "NPY201", # numpy 2.0
  "PERF",   # perflint
  "RUF",    # ruff
  # v flake8 v
  "B",
  "C4",
  "FBT",
  "A",
  "EM",
  "ISC",
  "FA",
  "G",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "PLW2901", "N812", "N806", "G004", "PLR6301", "PLR0917", "PLR1702", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["SLF001", "PLC0415", "RUF029", "PLR2004"]
"tests/**/*.py" = ["SLF001", "PLC0415", "RUF029", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true
exclude = ["*.md"]

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

# for pyright LSP
[tool.pyright]
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
    "llm: marks tests requiring real LLM API calls (deselect with '-m \"not llm\"')",
    "elasticsearch: marks tests requiring Elasticsearch connection (deselect with '-m \"not elasticsearch\"')",
]
addopts = "-m 'not llm and not elasticsearch and not integration'"
