[project]
dependencies = [
  "python-dateutil ~= 2.9.0",
  "scrapy ~= 2.16.0",
  "beautifulsoup4 ~= 4.15.0",
  "lxml ~= 6.1.1",
  "python-dotenv ~= 1.2.2",
  "rich ~= 15.0.0",
  "langdetect ~= 1.0.9",
  "pyyaml ~= 6.0.3",
  "fastapi ~= 0.138.0",
  "uvicorn ~= 0.49.0",
  "litellm ~= 1.89.1",
  "httpx ~= 0.28.1",
  "pydantic-settings ~= 2.14.1",
  "faiss-cpu ~= 1.14.3",
  "qdrant-client ~= 1.18.0",
  "kv-search[elasticsearch] ~= 0.3",
  "pysocks ~= 1.7.1",
  "jsonargparse[signatures] ~= 4.49.0",
  "pypdf ~= 6.13.2",
  "python-docx ~= 1.2.0",
  "openpyxl ~= 3.1.5",
  "odfpy ~= 1.4.1",
  "chardet ~= 7.4.3",
  "mcp ~= 1.27.2",
  "jinja2 ~= 3.1.6",
  "psycopg[binary,pool] ~= 3.3.4",
  "redis ~= 8.0.1",
  "PyJWT[crypto] ~= 2.13.0",
  "structlog ~= 26.1.0",
  "sse-starlette ~= 3.4.5",
  "python-multipart ~= 0.0.32",
  "aiofiles ~= 25.1.0",
  "alembic ~= 1.18.4",
  "sqlalchemy ~= 2.0.51",
  "elasticsearch >= 9.4.1, < 10",
  "apscheduler ~= 3.11.2",
  "pytesseract ~= 0.3.13",
  "pdf2image ~= 1.17.0",
]
name = "harmony"
dynamic = ["version", "readme"]
description = "On-premise LLM-powered information retrieval system - The opposite of Perplexity"
license = { text = "Other/Proprietary License" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = "~=3.13"

[[project.authors]]
name = "Anton Lu"
email = "anton96lu@gmail.com"

[project.urls]
homepage = "https://github.com/antolu/harmony"
repository = "https://github.com/antolu/harmony"

[project.optional-dependencies]
test = ["pytest ~= 9.1.1", "pytest-cov ~= 7.1.0", "pytest-asyncio ~= 1.4.0", "httpx ~= 0.28.1", "respx ~= 0.23.1"]
doc = ["myst-parser ~= 5.1.0", "sphinx-copybutton ~= 0.5.2"]
dev = ["pre-commit ~= 4.6.0", "ruff ~= 0.15.19", "mypy ~= 2.1.0", "types-PyYAML"]
browser = ["scrapy-playwright ~= 0.0.47", "playwright ~= 1.60.0"]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 6.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "harmony/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["harmony*"]
namespaces = false

[tool.setuptools.package-data]
carla = ["py.typed"]
harmony = ["py.typed"]

[project.scripts]
harmony-crawl = "harmony.providers.web_crawler.cli_crawl:main"
harmony-index = "harmony.providers.web_crawler.cli_index:main"
harmony-ingest-fs = "harmony.providers.filesystem.cli_ingest:main"
harmony-api = "harmony.api.main:run"
harmony-reset-state = "harmony.tools.reset_state:main"
harmony-auth = "harmony.providers.web_crawler.auth.cli:main"
harmony-embed = "harmony.tools.embedder:main"
harmony-acl-backfill = "harmony.tools.acl_backfill:main"

# Entry point for custom authentication providers
# Third-party packages can register custom auth providers:
#
# [project.entry-points."harmony.auth_providers"]
# my_custom_auth = "my_package.auth:MyCustomAuthProvider"
[project.entry-points."harmony.auth_providers"]
# Empty by default - for third-party extensions

# Entry point for custom data source providers
# Third-party packages can register custom providers:
#
# [project.entry-points."harmony.providers"]
# my_custom_provider = "my_package.providers:MyCustomProvider"
[project.entry-points."harmony.providers"]
# Empty by default — for third-party extensions. Built-ins (web-crawler, filesystem)
# are registered directly in ProviderRegistry, not via entry points.

# include black configuration for easy to use with VSCode and PyCharm
# autoformatter
# For pre-commit, only ruff is used.
[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
]

line-length = 88         # black and ruff default
target-version = "py311"
preview = true

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
  "F",   # pyflakes
  "E",   # error  (pycodestyle)
  "W",   # warning (pycodestyle)
  "I",   # isort
  "N",   # naming  (pep8)
  "UP",  # pyupgrade
  "PLC", # convention  (pylint)
  "PLE", # error  (pylint)
  "PLW", # warning  (pylint)
  "PLR", # refactor  (pylint)
  # "D",  # docstring (pydocstyle),  # not enabled by default
  "PD",     # pandas
  "TRY",    # tryceratops
  "NPY",    # numpy
  "NPY201", # numpy 2.0
  "PERF",   # perflint
  "RUF",    # ruff
  # v flake8 v
  "B",
  "C4",
  "FBT",
  "A",
  "EM",
  "ISC",
  "FA",
  "G",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "PLW2901", "N812", "N806", "G004", "PLR6301", "PLR0917", "PLR1702", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["SLF001", "PLC0415", "RUF029", "PLR2004"]
"tests/**/*.py" = ["SLF001", "PLC0415", "RUF029", "PLR2004"]
"harmony/providers/web_crawler/__init__.py" = ["RUF067"]
"harmony/providers/web_crawler/auth/__init__.py" = ["RUF067"]
"harmony/providers/filesystem/__init__.py" = ["RUF067"]
"harmony/tools/__init__.py" = ["RUF067"]
"harmony/models/__init__.py" = ["RUF067"]
"harmony/observability/__init__.py" = ["RUF067"]
"harmony/services/__init__.py" = ["RUF067"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true
exclude = ["*.md"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytesseract.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["kubernetes.*"]
ignore_missing_imports = true

# for pyright LSP
[tool.pyright]
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
    "llm: marks tests requiring real LLM API calls (deselect with '-m \"not llm\"')",
    "elasticsearch: marks tests requiring Elasticsearch connection (deselect with '-m \"not elasticsearch\"')",
]
addopts = "-m 'not llm and not elasticsearch and not integration'"
